src/test/ui/compile-fail-migration/rfc-2126-extern-in-paths/non-existent-3.stderr
error[E0463]: can't find crate for `ycrate`
  --> $DIR/non-existent-3.rs:13:5
   |
LL | use extern::ycrate; //~ ERROR can't find crate for `ycrate`
   |     ^^^^^^^^^^^^^^ can't find crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
